[package]
name = "tzo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde_json = "1.0.64"
enum-display-derive = "0.1.1"
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"